# windows_event_analyzer

./: .env.example  .flake8  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
config/: settings.py
data/sample_logs/: sample_attack_chain.json  security.csv
rules/sigma/: win_security_anonymous_logon.yml  win_security_wevtutil_clear_log.yml  win_security_whoami_recon.yml
src/: correlator.py  dashboard.py  detector.py  enricher.py  main.py  mitre_mapper.py  parser.py  report_generator.py  risk_scorer.py  sigma_loader.py
tests/: conftest.py  test_correlator.py  test_dashboard.py  test_detector.py  test_enricher.py  test_main.py  test_mitre_mapper.py  test_parser.py  test_report_generator.py  test_risk_scorer.py  test_sigma_loader.py
