[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "windows-event-analyzer"
version = "0.10.0"
description = "SOC triage tool for Windows Security event log analysis with MITRE ATT&CK mapping"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["security", "soc", "windows", "evtx", "threat-detection", "mitre-attack", "sigma"]
classifiers = ["Development Status :: 4 - Beta",
               "Intended Audience :: Information Technology",
               "Topic :: Security",
               "Programming Language :: Python :: 3",
               "Programming Language :: Python :: 3.10",
               "Programming Language :: Python :: 3.11",
               "Programming Language :: Python :: 3.12",
               "Programming Language :: Python :: 3.13",
               "Programming Language :: Python :: 3.14",
               "License :: OSI Approved :: MIT License"]
dependencies = ["python-evtx>=0.7.4",
                "flask>=3.1.0,<4.0",
                "python-dotenv>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=9.0",
       "pytest-cov>=4.1"]
lint = ["ruff>=0.4"]

[project.scripts]
evtx-analyze = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short --cov=src --cov=config --cov-report=term-missing --cov-fail-under=95"

[tool.coverage.run]
source = ["src", "config"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 95
